welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    // Write your code here
	if (!estFaceMur) avance;
	if (getCouleurSol()=Color.green) return true;
	else {if (!estFaceMur) recule;}
}